FEATURE: Plug | Added API methods to listen to download-complete events [amc1]
FEATURE: Plug | Added various convenience methods for using log views and config models [amc1]
FEATURE: Plug | Added API to allow native UI objects to be added to config views [amc1]
FEATURE: Plug | Added some more methods for plugins to control some transport mechanisms [amc1]

CHANGE: Core  | added "upload_only" flag to AZMP/LTEP handshakes, disconnect any uploading_only peers we don't need / that don't need us when disconnect seeds when seeding is set [The 8472]
CHANGE: Core  | Further startup speed improvements [The 8472, amc1, parg]
CHANGE: Core  | Speedup of various file batch operations (priority changes) [amc1, The 8472]
CHANGE: Core  | Added option to allow the removal of files linked outside the save directory when removing data [amc1]
CHANGE: UI    | Column menu option to disable fast renaming in files view, changed fast rename to behave more like the windows explorer [The 8472]
CHANGE: UI    | In console UI, shrunk help text down to be more concise [amc1]

BUGFIX: Core  | Made change so that plugins could not inadvertently turn off Azureus extension protocol [amc1]
BUGFIX: Core  | The UDP tracker client option has been nonfunctional for quite a while now -> fixed [The 8472]
BUGFIX: Core  | Fixed various file-priority-change related bugs that resulted in error states [The 8472]
BUGFIX: Core  | Stop premature creation of torrent directories before download has started [amc1] 


2008.04.10 | Azureus Vuze 3.0.5.2

FEATURE: UIv3 | Ability to rate directly from rating reminder activity entry [TuxPaper] 
FEATURE: UIv3 | Added progress spinner animation for the LightBox [knguyen]

CHANGE: Core  | Don't auto-UDP probe on initial announce if tracker not known to support UDP - hit on second and remember outcome [Parg]
CHANGE: Core  | Improve startup times by taking various torrent-load operations off main thread [Parg]
CHANGE: Core  | Add reason-messages for update check failures [Parg]